--- a/Projeto_Casas_Para_Alugar.ipynb
+++ b/Projeto_Casas_Para_Alugar.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importando a base de dados \"casas_para_alugar.xlsx\""
+    "### Importando a base de dados \"casas_para_alugar.csv\""
    ]
   },
   {
